Fixed the issue of Flickr gallery going out of screen width

--- a/css/tk-spars.css
+++ b/css/tk-spars.css
@@ -1,7 +1,6 @@
 body {
 	font-size: 18px;
     line-height: 1.8;
-    min-width: 680px;
 }
 h1 {
 	font-size: 48px;
@@ -32,6 +31,9 @@ h1 {
 .photogallery {
 	display: inline;
 	margin: auto;
+	width: 640px;
+	height: 480px;
+	max-width: 100%;
 }
 
 @media (max-width: 991px) {
